hphp/hack/test/typecheck/use_list_trailing_comma_bad.php.exp
File "use_list_trailing_comma_bad.php", line 9, characters 7-7:
A name is expected here. (Parsing[1002])
File "use_list_trailing_comma_bad.php", line 10, characters 1-1:
Encountered unexpected text ``, was expecting a type hint. (Parsing[1002])
