hphp/hack/test/typecheck/use_list_trailing_comma_bad.php
<?hh // partial

trait B {}
trait C {}

class A {
  use
    B,
    C,
    ;
}
